# Delay-Grain

./: README.md
Delay Grain/: Delay Grain.code-workspace  delaygrain.cmajor  delaygrain.cmajorpatch
Delay Grain/Juce build v2/: CMakeLists.txt  cmajor_plugin.cpp
Delay Grain/view/: index.js
Delay Grain/xcbuildv2/: CMakeCache.txt  cmake_install.cmake
Delay Grain/xcbuildv2/CMakeScripts/: ReRunCMake.make
Delay Grain/xcbuildv2/Debug/: DelayGrain_vst3_helper
Delay Grain/xcbuildv2/DelayGrain_artefacts/Debug/AU/DelayGrain.component/Contents/: Info.plist
Delay Grain/xcbuildv2/DelayGrain_artefacts/Debug/AUv3/DelayGrain.appex/Contents/: Info.plist
Delay Grain/xcbuildv2/DelayGrain_artefacts/Debug/Standalone/DelayGrain.app/Contents/: Info.plist
Delay Grain/xcbuildv2/DelayGrain_artefacts/Debug/Standalone/DelayGrain.app/Contents/_CodeSignature/: CodeResources
Delay Grain/xcbuildv2/DelayGrain_artefacts/Debug/VST3/DelayGrain.vst3/Contents/: Info.plist
Delay Grain/xcbuildv2/DelayGrain_artefacts/Debug/VST3/DelayGrain.vst3/Contents/Resources/: moduleinfo.json
Delay Grain/xcbuildv2/DelayGrain_artefacts/Debug/VST3/DelayGrain.vst3/Contents/_CodeSignature/: CodeResources
Delay Grain/xcbuildv2/DelayGrain_artefacts/JuceLibraryCode/: Info.txt  JuceHeader.h
Delay Grain/xcbuildv2/DelayGrain_artefacts/JuceLibraryCode/Debug/: Defs.txt
Delay Grain/xcbuildv2/DelayGrain_artefacts/JuceLibraryCode/DelayGrain_AU/: Info.plist
Delay Grain/xcbuildv2/DelayGrain_artefacts/JuceLibraryCode/DelayGrain_AUv3/: Info.plist
Delay Grain/xcbuildv2/DelayGrain_artefacts/JuceLibraryCode/MinSizeRel/: Defs.txt
Delay Grain/xcbuildv2/SmoothRandomDelayFilter.xcodeproj/: project.pbxproj
Delay Grain/xcbuildv2/SmoothRandomDelayFilter.xcodeproj/project.xcworkspace/xcuserdata/victorschulhoff.xcuserdatad/: UserInterfaceState.xcuserstate
Delay Grain/xcbuildv2/SmoothRandomDelayFilter.xcodeproj/xcuserdata/victorschulhoff.xcuserdatad/xcschemes/: xcschememanagement.plist
Delay Grain/xcbuildv2/juce/: JUCEExportConfig.cmake  cmake_install.cmake
Delay Grain/xcbuildv2/juce/CMakeScripts/: ReRunCMake.make
Delay Grain/xcbuildv2/juce/JUCE.xcodeproj/: project.pbxproj
Delay Grain/xcbuildv2/juce/modules/: cmake_install.cmake
Delay Grain/xcbuildv2/juce/tools/: CMakeCache.txt  JUCEExportConfig.cmake  JUCEToolsExport.cmake  cmake_install.cmake
Delay Grain/xcbuildv2/juce/tools/CMakeScripts/: ReRunCMake.make
Delay Grain/xcbuildv2/juce/tools/JUCE.xcodeproj/: project.pbxproj
Delay Grain/xcbuildv2/juce/tools/modules/: cmake_install.cmake
